Fix cursor overflow, added heroku logo in skillset and added order on skillset model

--- a/client/src/styles/Cursor.scss
+++ b/client/src/styles/Cursor.scss
@@ -5,10 +5,13 @@
 
 #cursor {
     position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     top:0;
     left:0;
-    width: 52px;
-    height: 52px;
+    height: 104px;
+    width: 104px;
     opacity: 1;
     pointer-events: none;
     -webkit-user-select: none;
@@ -21,11 +24,9 @@
 
 
     .wrapper{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;  
+        position: relative;
+        width: 52px;
+        height: 52px;
         
         & > span{
 
